--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -106,9 +106,7 @@
     "### Single Text Classification\n",
     "\n",
     "Let's try to classify a single phrase that definitely bears emotions but is also somewhat ambiguous - \"Oh my God!\".\n",
-    "We will save the result in the variable `udf_output` to support automatic testing of this notebook.\n",
-    "\n",
-    "# todo how to edit that part?"
+    "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
@@ -124,7 +122,6 @@
    },
    "source": [
     "%%sql\n",
-    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
@@ -142,18 +139,21 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "In this instance, we let the model return only the highest ranking result by setting `return_ranks = \"HIGHEST\"`. If we want to get all available results instead, we can run it with `return_ranks = \"ALL\"` instead:",
-   "id": "e1450211d686556f"
+   "id": "e1450211d686556f",
+   "metadata": {},
+   "source": [
+    "In this instance, we let the model return only the highest ranking result by setting `return_ranks = \"HIGHEST\"`. If we want to get all available results instead, we can run it with `return_ranks = \"ALL\"` instead:"
+   ]
   },
   {
+   "cell_type": "code",
+   "id": "f5a4df2af2b2ad80",
    "metadata": {
     "tags": [
      "running_model"
     ]
    },
-   "cell_type": "code",
    "source": [
     "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
@@ -169,7 +169,6 @@
     ")\n",
     "SELECT label, score, rank, error_message FROM MODEL_OUTPUT  ORDER BY SCORE DESC"
    ],
-   "id": "f5a4df2af2b2ad80",
    "outputs": [],
    "execution_count": null
   },
@@ -263,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
